<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TweetPath</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="title_activity_login">TweetPath Login</string>
    <string name="login_label">Connect with Twitter</string>
    <string name="username">UserName</string>
    <string name="body_tweet">Body Tweet</string>
    <string name="screen_name">ScreenName</string>
    <string name="tweet_user_image">Image of the User who tweet</string>
    <string name="time_ago">ago</string>
    <string name="compose_tweet">Compose</string>
    <string name="tweet_hint">What\'s happening?</string>
    <string name="tweet">TWEET</string>
    <string name="compose_tweet_title">Compose Tweet</string>
    <string name="max_characters">/140 chars</string>
    <string name="remaining_chars">140</string>
    <string name="user_profile">Profile</string>
    <string name="user_profile_title">User Profile</string>
    <string name="follower_count">5 FOLLOWERS</string>
    <string name="following_count">5 FOLLOWING</string>
    <string name="status_count">5 TWEETS</string>
    <string name="tag_line">TagLine</string>
    <string name="logout">Logout</string>

</resources>