<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.TimelineActivity">

    <item android:id="@+id/action_profile"
        android:orderInCategory="5"
        android:title="@string/user_profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_compose"
        android:orderInCategory="10"
        android:title="@string/compose_tweet"
        android:icon="@drawable/ic_compose_tweet"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_logout"
        android:orderInCategory="15"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
