<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    android:background="#DDD">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/rlUserHeader"
        android:background="#FFF">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ivProfileBanner"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            android:minHeight="40dp" />

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:id="@+id/ivProfileImage"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:contentDescription="@string/tweet_user_image"
            android:layout_below="@+id/ivProfileBanner"
            android:layout_marginTop="-36dp"
            android:layout_marginLeft="36dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivProfileImage"
            android:id="@+id/rlUserInfo"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvUserName"
                android:text="@string/username"
                android:textStyle="bold"
                android:textColor="#222"
                android:textSize="18sp"
                android:layout_alignParentStart="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_line"
                android:id="@+id/tvTagLine"
                android:textColor="#AAA"
                android:textSize="15sp"
                android:layout_below="@+id/tvUserName"
                android:layout_alignLeft="@+id/tvUserName" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvTagLine">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_count"
                    android:id="@+id/tvStatusCount"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginRight="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower_count"
                    android:id="@+id/tvFollowerCount"
                    android:layout_marginRight="15dp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_count"
                    android:id="@+id/tvFollowingCount"
                    android:layout_marginRight="0dp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlUserHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/flContainer"
        android:background="#FFF"
        android:layout_marginTop="3dp" />
</RelativeLayout>
